src/components/InfoSection/InfoSection.css
.star {
    color: gray;
}

.star-filled {
    color: rgb(255, 96, 96);
}

.slideshowInfo {
    display: grid;
    grid-template-columns: repeat(2, 50%);
}

.slideshow_div1,
.slideshow_div2 {
    margin: 25px 100px;
}

.slideshow_div1>h1,
.slideshow_div2>h1 {
    color: rgb(255, 96, 96);
    font-size: 36px;
    margin: 2.5px 0;
    white-space: nowrap;
}

.slideshow_div1>h1+p,
.slideshow_div2>h1+p {
    font-weight: 500;
}

.host {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    gap: 16px;
}

.host>img {
    height: 64px;
    border-radius: 50%;
    margin: 0 16px;
}

.host p {
    width: 64px;
    color: rgb(255, 96, 96);
    font-weight: 500;
}

.rating {
    display: flex;
    justify-content: flex-end;
    gap: 16px;
    margin: 10px 0;
    font-size: 24px;
}

.info_bar {
    display: grid;
    grid-template-columns: repeat(2, 50%);
    padding: 0 5%;
    gap: 20px;
    margin: 20px 0;
}

.bar {
    width: 98%;
}

.info-bar-container {
    max-width: 100%;
    overflow: hidden;
}

.centered-info-bar {
    width: 90%;
}

.info_location {
    background-color: rgb(255, 96, 96);
    color: #f6f6f6;
    padding: 15px;
    border-radius: 5px;
    font-weight: bold;
    display: flex;
    justify-content: space-between;
    font-size: 20px;
}

.info_location_p {
    background-color: #f6f6f6;
    padding: 10px;
    max-height: 0;
    overflow: hidden;
    opacity: 0;
    transition: max-height 0.2s ease-out, opacity 0.2s ease-out;
}

.Info_title_p {
    background-color: #f6f6f6;
    padding: 21px 10px;
    max-height: 0;
    overflow: hidden;
    opacity: 0;
    transition: max-height 0.2s ease-out, opacity 0.2s ease-out;
}

.Info_title_p.visible {
    max-height: 200px;
    opacity: 1;
}

.Info_title_p.visible>#text {
    display: flex;
    flex-direction: column;
}

.rotate180 {
    transform: rotate(-180deg);
    transition: transform 0.3s ease;
}

.rotate0 {
    transform: rotate(0deg);
    transition: transform 0.3s ease;
}

.equipment-column>p {
    display: flex;
    padding: 0.21rem;
}

.fa-chevron-up {
    color: white;
    cursor: pointer;
}

.tags {
    display: flex;
    gap: 16px;
    margin: 15px 0;
}

.tags>p {
    background-color: rgb(255, 96, 96);
    color: white;
    padding: 5px;
    font-weight: bolder;
    border-radius: 7.5px;
    font-size: 12px;
}

@media (max-width: 760px) {
    .slideshowInfo {
        display: flex;
        flex-direction: column;
    }

    .slideshow_div1,
    .slideshow_div2 {
        margin: 25px 100px;
        justify-content: center;
        display: flex;
        flex-direction: column;
        align-items: first baseline;
        margin: 1rem 1.2rem 0;
    }

    .slideshow_div1>h1,
    .slideshow_div2>h1 {
        font-size: 26px;
    }

    .slideshow_div2 {
        flex-direction: row-reverse;
        justify-content: space-between;
        align-items: center;
        margin: 0 1.2rem;
    }

    .info_bar {
        display: flex;
        flex-direction: column;
        padding: 0 3%;
    }

    .centered-info-bar {
        width: 94%;
    }

    .rating {
        font-size: 16px;
        gap: 6px;
    }

    .host>p {
        font-size: 13px;
    }

    .host>img {
        height: 40px;
        margin: 7px 0;
    }

    .bar {
        width: 100%;
    }

}

